[gd_scene load_steps=4 format=3 uid="uid://ctkvdtlq3eakq"]

[ext_resource type="Script" path="res://src/core/scenes/game/ui/target_display/target_display.gd" id="1_qjoty"]
[ext_resource type="PackedScene" uid="uid://853xtf6xxnj3" path="res://src/core/scenes/game/ui/target_display/map_target_range.tscn" id="1_wfedo"]
[ext_resource type="PackedScene" uid="uid://dkvuuydpfpesc" path="res://src/core/scenes/game/ui/target_display/target_cell.tscn" id="2_8v4y2"]

[node name="TargetDisplay" type="Node2D"]
script = ExtResource("1_qjoty")

[node name="MapTargetRange" parent="." instance=ExtResource("1_wfedo")]
metadata/_edit_lock_ = true

[node name="TargetCell" parent="." instance=ExtResource("2_8v4y2")]
visible = false
